--- a/node-crash-course/package.json
+++ b/node-crash-course/package.json
@@ -1,25 +1,15 @@
 {
-<<<<<<< HEAD
     "name": "node",
     "version": "1.0.0",
     "description": "node crash course",
     "main": "index.js",
     "type": "module",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "nodemon --env-file=.env server.js"
     },
     "author": "aarav bajaj",
-    "license": "MIT"
+    "license": "MIT",
+    "devDependencies": {
+      "nodemon": "^3.1.0"
+    }
   }
-=======
-  "name": "node",
-  "version": "1.0.0",
-  "description": "node crash course",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "aarav bajaj",
-  "license": "MIT"
-}
->>>>>>> ce10ce19366334e79553e36b015136d67f1ecdc6
